--- a/chmc_wbms/templates/admin/admin_dashboard.html
+++ b/chmc_wbms/templates/admin/admin_dashboard.html
@@ -23,19 +23,23 @@
       <!-- Dashboard Content for Home -->
       <div class="d-flex justify-content-around mt-4">
         <div class="text-center">
-          <h5>Total Clinic User Account</h5>
-          <p>15</p>
+            <i class="bi bi-people-fill icon-large"></i>
+            <h5>Total Clinic User Account</h5>
+            <p>15</p>
         </div>
         <div class="text-center">
-          <h5>Total Document Recorded</h5>
-          <p>1,001</p>
+            <i class="bi bi-file-earmark-text icon-large"></i>
+            <h5>Total Document Recorded</h5>
+            <p>1,001</p>
         </div>
         <div class="text-center">
-          <h5>Patient Serve Counter</h5>
-          <p>975</p>
+            <i class="bi bi-person-check-fill icon-large"></i>
+            <h5>Patient Serve Counter</h5>
+            <p>975</p>
         </div>
       </div>
     </div>
+  </div>
     <div class="tab-pane fade" id="account" role="tabpanel" aria-labelledby="account-tab">
       <h2>Account Data</h2>
       <div class="container mt-5">
