--- a/chmc_wbms/templates/admin/admin_base.html
+++ b/chmc_wbms/templates/admin/admin_base.html
@@ -36,16 +36,37 @@
             {% include 'admin/includes/admin_navbar.html' %}
             <div class="section-padding">
                 <div class="container">
-                    <div class="section">
-                        <main>
-                            {% block content %}
+                    {% include 'admin/includes/admin_tabbar.html' %}
+                        <div class="tab-content mt-3" id="dashboardTabsContent">
+                                <main>
+
+                                    {% block content %}
                       
-                            {% endblock %}
-                        </main>
+                                    {% endblock %}
+                                </main>
+                        </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+{% comment %} <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    </li>
+  </ul> {% endcomment %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="{% static 'assets/js/core/jquery.3.2.1.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
