--- a/chmc_wbms/templates/employee/edit_profile.html
+++ b/chmc_wbms/templates/employee/edit_profile.html
@@ -1,4 +1,5 @@
 {% extends 'employee/employee_base.html' %}
+{% load custom_filters %}
 {% load static %}
 {% block title %}Edit Profile{% endblock %}
 
