--- a/chmc_wbms/templates/employee/employee_base.html
+++ b/chmc_wbms/templates/employee/employee_base.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="{% static 'css/font.css' %}">
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="stylesheet" href="{% static 'css/admin_dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'css/employee_dashboard.css' %}">
     <link rel="stylesheet" href="{% static 'css/components.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles1.css' %}">  
 
@@ -39,7 +40,6 @@
                     {% include 'employee/includes/employee_tabbar.html' %}
                         <div class="tab-content mt-3" id="dashboardTabsContent">
                                 <main>
-
                                     {% block content %}
                       
                                     {% endblock %}
