Urls goods na pati ibang changes na rin

--- a/chmc_wbms/templates/employee/includes/employee_tabbar.html
+++ b/chmc_wbms/templates/employee/includes/employee_tabbar.html
@@ -5,20 +5,20 @@
           Home</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a  href="{% url 'employee_dashboard' %}" class="nav-link">
-          Record List</a>
+      <a  href="{% url 'employee_patients_list' %}" class="nav-link">
+          Patients List</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="{% url 'employee_dashboard' %}" class="nav-link">
-          Record Documents</a>
+      <a href="{% url 'document_results' %}" class="nav-link">
+          Document Results</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="{% url 'employee_dashboard' %}" class="nav-link">
+      <a href="{% url 'associated_doctors' %}" class="nav-link">
           Associated Doctors</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="{% url 'employee_dashboard' %}" class="nav-link">
-          Doctors Reading</a>
+      <a href="{% url 'assoc_doc_readings' %}" class="nav-link">
+          Associated Doctor's Readings</a>
     </li>
     
   </ul>
