--- a/chmc_wbms/templates/employee/edit_profile.html
+++ b/chmc_wbms/templates/employee/edit_profile.html
@@ -1,5 +1,5 @@
 {% extends 'employee/employee_base.html' %}
-{% load custom_filters %}
+
 {% load static %}
 {% block title %}Edit Profile{% endblock %}
 
@@ -50,6 +50,7 @@
     </div>
 
     <button type="submit">Save Changes</button>
+    <button type="button" onclick="goBack()">Back</button> <!-- Back button -->
 </form>
 
 <script>
@@ -63,6 +64,10 @@
             passwordFields.style.display = 'none';
         }
     });
+
+    function goBack() {
+        window.history.back();
+    }
 </script>
 
 {% endblock %}
