--- a/chmc_wbms/templates/employee/patients_list.html
+++ b/chmc_wbms/templates/employee/patients_list.html
@@ -1,6 +1,6 @@
 {% extends 'employee/employee_base.html' %}
 
-{% block title %}Employee Dashboard{% endblock %}
+{% block title %}Patients List{% endblock %}
 
 {% block content %}
 
