--- a/chmc_wbms/templates/employee/employee_dashboard.html
+++ b/chmc_wbms/templates/employee/employee_dashboard.html
@@ -44,6 +44,7 @@
                 <th>Description</th>
                 <th>Type of Service</th>
                 <th>Appointment Time</th>
+                <th>Appointment Date</th>
             </tr>
         </thead>
         <tbody>
@@ -52,12 +53,14 @@
                 <td>Consultation</td>
                 <td>General Check-up</td>
                 <td>10:00 AM</td>
+                <th>November 12, 2024</th>
             </tr>
             <tr>
                 <td>002</td>
                 <td>Follow-up</td>
                 <td>Physical Therapy</td>
                 <td>11:30 AM</td>
+                <th>November 16, 2024</th>
             </tr>
         </tbody>
     </table>
