--- a/chmc_wbms/templates/employee/patients_list.html
+++ b/chmc_wbms/templates/employee/patients_list.html
@@ -6,4 +6,53 @@
 
 <h2>Patients List</h2>
 
+<body class="bg-light">
+
+    <div class="container my-5">
+        <div class="table-responsive">
+          <table class="table table-bordered text-center align-middle">
+            <thead class="bg-primary text-white">
+              <tr>
+                <th>PATIENT ID</th>
+                <th>FULL NAME</th>
+                <th>TYPE OF SERVICE</th>
+                <th>APPOINTMENT DATE</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>PID001</td>
+                <td>John Doe</td>
+                <td>General Checkup</td>
+                <td>2024-01-25</td>
+              </tr>
+              <tr>
+                <td>PID002</td>
+                <td>Jane Smith</td>
+                <td>Dental Cleaning</td>
+                <td>2024-02-10</td>
+              </tr>
+              <tr>
+                <td>PID003</td>
+                <td>Mark Wilson</td>
+                <td>Eye Checkup</td>
+                <td>2024-03-05</td>
+              </tr>
+              <tr>
+                <td>PID004</td>
+                <td>Emily Davis</td>
+                <td>Physical Therapy</td>
+                <td>2024-04-15</td>
+              </tr>
+              <tr>
+                <td>PID005</td>
+                <td>Michael Brown</td>
+                <td>Cardiology</td>
+                <td>2024-05-01</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
 {% endblock %}
