Goods na scheduling

--- a/chmc_wbms/templates/admin/create_account.html
+++ b/chmc_wbms/templates/admin/create_account.html
@@ -82,6 +82,7 @@
             <label for="floatingConfirmPassword">Confirm Password</label>
           </div>
           <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Create Account</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </form>
       </div>
     </div>
