--- a/chmc_wbms/templates/admin/manage_accounts.html
+++ b/chmc_wbms/templates/admin/manage_accounts.html
@@ -14,7 +14,7 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#accountModal{{ account.id }}">
                         <img src="{{ account.image.url }}" class="card-img-top" alt="Account Image">
                     
-                    <div class="card-body">
+                    <div class="card">
                         <h5 class="card-title">
                             {% if account.prefix %}
                                 {{ account.prefix }} {{ account.first_name }} {{ account.last_name }}
