--- a/chmc_wbms/templates/employee/employee_dashboard.html
+++ b/chmc_wbms/templates/employee/employee_dashboard.html
@@ -28,37 +28,30 @@
 
     <div class="d-flex justify-content-between align-items-center mb-3">
         <button class="btn btn-outline-primary" data-toggle="modal" data-target="#appointmentModal">
-            + Add Scheduled Appointment
+            + Add New Appointment
         </button>
-        <div class="date-pagination">
-            <button class="btn btn-link" onclick="prevDate()">&#9664; Prev</button>
-            <span id="current-date" class="mx-2 font-weight-bold">Oct. 10, 2024</span>
-            <button class="btn btn-link" onclick="nextDate()">Next &#9654;</button>
-        </div>
     </div>
 
     <table class="table table-bordered text-center">
         <thead class="thead-light">
             <tr>
-                <th>Patient ID</th>
+                <th>Client</th>
                 <th>Description</th>
                 <th>Type of Service</th>
+                <th>Appointment Date</th>
                 <th>Appointment Time</th>
             </tr>
         </thead>
         <tbody>
+            {% for appointment in appointments %}
             <tr>
-                <td>001</td>
-                <td>Consultation</td>
-                <td>General Check-up</td>
-                <td>10:00 AM</td>
+                <td>{{ appointment.client_name }}</td>
+                <td>{{ appointment.description }}</td>
+                <td>{{ appointment.service_types.all|join:", " }}</td>
+                <td>{{ appointment.appointment_date }}</td>
+                <td>{{ appointment.appointment_time }}</td>
             </tr>
-            <tr>
-                <td>002</td>
-                <td>Follow-up</td>
-                <td>Physical Therapy</td>
-                <td>11:30 AM</td>
-            </tr>
+            {% endfor %}
         </tbody>
     </table>
 </div>
@@ -74,34 +67,36 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form>
+                <form method="post" action="{% url 'employee_dashboard' %}">
+                    {% csrf_token %}
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Patient ID">
+                        <input type="text" class="form-control" name="client_name" placeholder="Client Name" required>
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Description">
+                        <input type="text" class="form-control" name="description" placeholder="Description" required>
                     </div>
                     <div class="form-group">
-                        <select class="form-control">
-                            <option>Type of Service</option>
-                            <option>General Check-up</option>
-                            <option>Physical Therapy</option>
-                            <option>Dental Check-up</option>
-                        </select>
+                        <label>Type of Service</label>
+                        {% for service in service_types %}
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="service_types" value="{{ service.id }}">
+                            <label class="form-check-label">{{ service.name }}</label>
+                        </div>
+                        {% endfor %}
                     </div>
                     <div class="form-group">
                         <label for="appointment-date">Appointment Date</label>
-                        <input type="date" id="appointment-date" class="form-control">
+                        <input type="date" id="appointment-date" class="form-control" name="appointment_date" required>
                     </div>
                     <div class="form-group">
                         <label for="appointment-time">Appointment Time</label>
-                        <input type="time" id="appointment-time" class="form-control">
+                        <input type="time" id="appointment-time" class="form-control" name="appointment_time" required>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" name="add_appointment" class="btn btn-primary">Add Appointment</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Add Appointment</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
@@ -111,15 +106,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-<script>
-    function prevDate() {
-        // Logic for moving to previous date
-    }
-    function nextDate() {
-        // Logic for moving to next date
-    }
-</script>
 
 
 {% endblock %}
