Konting Changes lang

--- a/chmc_wbms/templates/employee/edit_profile.html
+++ b/chmc_wbms/templates/employee/edit_profile.html
@@ -76,7 +76,7 @@
                     <!-- Save and Close Buttons -->
                     <div class="d-flex justify-content-end">
                         <button type="submit" class="btn btn-primary me-2">Save Changes</button>
-                        <a href="{% url 'manage_accounts' %}" class="btn btn-secondary">Close</a>
+                        <a href="{% url 'employee_dashboard' %}" class="btn btn-secondary">Close</a>
                     </div>
                 </form>
             </div>
