Minor changes lang ulit

--- a/chmc_wbms/templates/employee/document_results.html
+++ b/chmc_wbms/templates/employee/document_results.html
@@ -1,6 +1,6 @@
 {% extends 'employee/employee_base.html' %}
 
-{% block title %}Employee Dashboard{% endblock %}
+{% block title %}Document Results{% endblock %}
 
 {% block content %}
 
