--- a/chmc_wbms/templates/employee/assoc_doc_readings.html
+++ b/chmc_wbms/templates/employee/assoc_doc_readings.html
@@ -1,6 +1,6 @@
 {% extends 'employee/employee_base.html' %}
 
-{% block title %}Employee Dashboard{% endblock %}
+{% block title %}Associated Doctor's Readings{% endblock %}
 
 {% block content %}
 
