--- a/chmc_wbms/templates/employee/includes/employee_navbar.html
+++ b/chmc_wbms/templates/employee/includes/employee_navbar.html
@@ -43,7 +43,7 @@
                             Are you sure you want to Logout?
                         </div>
                         <div class="modal-footer">
-                            <a href="{% url 'admin_logout' %}"><button type="button" class="btn btn-primary">Logout</button></a>
+                            <a href="{% url 'employee_logout' %}"><button type="button" class="btn btn-primary">Logout</button></a>
                         </div>
                     </div>
                 </div>
