--- a/chmc_wbms/static/css/admin_dashboard.css
+++ b/chmc_wbms/static/css/admin_dashboard.css
@@ -1,7 +1,11 @@
-body {
+body, html {
     min-height: 100vh;
     position: relative;
     margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    
 }
 
 .bg_dashboard {
@@ -17,6 +21,26 @@ body {
         height: auto;
         padding: 20px;
     }
+}
+
+   /* Make the modal body scrollable */
+   .modal-body {
+    max-height: 400px; /* Adjust height to fit your requirements */
+    overflow-y: auto; /* Enable vertical scrolling */
+}
+
+/* Add smooth scrolling for better user experience */
+.modal-body::-webkit-scrollbar {
+    width: 8px;
+}
+
+.modal-body::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 4px;
+}
+
+.modal-body::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 .nav-tabs .nav-link {
@@ -92,3 +116,15 @@ body {
       margin-top: 15px;      /* Adds space above the icon */
       margin-bottom: 10px;   /* Adds space below the icon */
   }
+
+  .scrollable-container {
+    max-height: 80vh; /* Adjust height as needed */
+    overflow-y: auto;
+    border: 1px solid #ddd; /* Optional: to visually separate the container */
+    padding: 10px;
+    background-color: #f8f9fa; /* Optional: background color */
+}
+
+.scrollable-container .row {
+    margin: 0;
+}
