--- a/chmc_wbms/templates/employee/edit_profile.html
+++ b/chmc_wbms/templates/employee/edit_profile.html
@@ -6,86 +6,86 @@
 {% block content %}
 {% load static %}
 {% load widget_tweaks %}
-<h2>Edit Profile</h2>
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    
-    <!-- Display any form errors -->
-    {{ form.non_field_errors }}
+<div class="form-container">
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        
+        <!-- Display any form errors -->
+        {{ form.non_field_errors }}
 
-    <div class="col-xl-8">
-        <div class="card mb-4">
-            <div class="card-header bg-primary text-white">Account Details</div>
-            <div class="card-body">
-                <!-- Account details form fields -->
-                <div class="row gx-3 mb-3">
-                    <div class="col-md-6">
-                        <label for="{{ form.first_name.id_for_label }}" class="form-label">First Name:</label>
-                        {{ form.first_name|add_class:"form-control" }}
+        <div class="col-xl-12">
+            <div class="card mb-4">
+                <div class="card-header bg-primary text-white">Account Details</div>
+                <div class="card-body">
+                    <!-- Account details form fields -->
+                    <div class="row gx-3 mb-3">
+                        <div class="col-md-4">
+                            <label for="{{ form.first_name.id_for_label }}" class="form-label">First Name:</label>
+                            {{ form.first_name|add_class:"form-control" }}
+                        </div>
+                        <div class="col-md-4">
+                            <label for="{{ form.last_name.id_for_label }}" class="form-label">Last Name:</label>
+                            {{ form.last_name|add_class:"form-control" }}
+                        </div>
+                        <div class="col-md-4">
+                            <label for="{{ form.prefix.id_for_label }}" class="form-label">Prefix:</label>
+                            {{ form.prefix|add_class:"form-control" }}
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <label for="{{ form.last_name.id_for_label }}" class="form-label">Last Name:</label>
-                        {{ form.last_name|add_class:"form-control" }}
-                    </div>
-                </div>
 
-                <div class="row gx-3 mb-3">
-                    <div class="col-md-6">
-                        <label for="{{ form.email.id_for_label }}" class="form-label">Email:</label>
-                        {{ form.email|add_class:"form-control" }}
-                    </div>
-                    <div class="col-md-6">
-                        <label for="{{ form.prefix.id_for_label }}" class="form-label">Prefix:</label>
-                        {{ form.prefix|add_class:"form-control" }}
-                    </div>
-                </div>
-
-                <div class="row gx-3 mb-3">
-                    <div class="col-md-6">
-                        <label for="{{ form.is_employee.id_for_label }}" class="form-label">Employee:</label>
-                        {{ form.is_employee|add_class:"form-check-input" }}
-                    </div>
-                    <div class="col-md-6">
-                        <label for="{{ form.is_associated_doctor.id_for_label }}" class="form-label">Associated Doctor:</label>
-                        {{ form.is_associated_doctor|add_class:"form-check-input" }}
-                    </div>
-                </div>
-
-                <!-- Password change toggle -->
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="change-password-toggle" name="change_password" onchange="togglePasswordFields()">
-                    <label for="change-password-toggle" class="form-check-label">Change Password</label>
-                </div>
-
-                <!-- Password fields (hidden by default) -->
-                <div id="password-fields" style="display: none;">
                     <div class="row gx-3 mb-3">
                         <div class="col-md-6">
-                            <label for="{{ form.password.id_for_label }}" class="form-label">Password:</label>
-                            {{ form.password|add_class:"form-control" }}
+                            <label for="{{ form.email.id_for_label }}" class="form-label">Email:</label>
+                            {{ form.email|add_class:"form-control" }}
+                        </div>
+                        
+                    </div>
+
+                    <div class="row gx-3 mb-3">\
+                        <div class="col-md-6">
+                            <label for="{{ form.is_employee.id_for_label }}" class="form-label">Employee:</label>
+                            {{ form.is_employee|add_class:"form-check-input" }}
                         </div>
                         <div class="col-md-6">
-                            <label for="{{ form.confirm_password.id_for_label }}" class="form-label">Confirm Password:</label>
-                            {{ form.confirm_password|add_class:"form-control" }}
+                            <label for="{{ form.is_associated_doctor.id_for_label }}" class="form-label">Associated Doctor:</label>
+                            {{ form.is_associated_doctor|add_class:"form-check-input" }}
+                        </div>
+                        <div class="col-md-6">
+                            <label for="{{ form.image.id_for_label }}" class="form-label">Profile Picture:</label>
+                            {{ form.image|add_class:"form-control-file" }}
                         </div>
                     </div>
-                </div>
 
-                <!-- Image upload -->
-                <div class="mb-3">
-                    <label for="{{ form.image.id_for_label }}" class="form-label">Profile Picture:</label>
-                    {{ form.image|add_class:"form-control-file" }}
-                </div>
+                    <!-- Password change toggle -->
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="change-password-toggle" name="change_password" onchange="togglePasswordFields()">
+                        <label for="change-password-toggle" class="form-check-label">Change Password</label>
+                    </div>
 
-                <!-- Save and Close Buttons -->
-                <div class="d-flex justify-content-end">
-                    <button type="submit" class="btn btn-primary me-2">Save Changes</button>
-                    <a href="{% url 'employee_dashboard' %}" class="btn btn-secondary">Close</a>
+                    <!-- Password fields (hidden by default) -->
+                    <div id="password-fields" style="display: none;">
+                        <div class="row gx-3 mb-3">
+                            <div class="col-md-6">
+                                <label for="{{ form.password.id_for_label }}" class="form-label">Password:</label>
+                                {{ form.password|add_class:"form-control" }}
+                            </div>
+                            <div class="col-md-6">
+                                <label for="{{ form.confirm_password.id_for_label }}" class="form-label">Confirm Password:</label>
+                                {{ form.confirm_password|add_class:"form-control" }}
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Save and Close Buttons -->
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn btn-primary me-2">Save Changes</button>
+                        <a href="{% url 'employee_dashboard' %}" class="btn btn-secondary">Close</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</form>
+    </form>
+</div>
 
 <script>
     // Toggle password fields visibility based on checkbox
