--- a/chmc_wbms/templates/employee/includes/employee_tabbar.html
+++ b/chmc_wbms/templates/employee/includes/employee_tabbar.html
@@ -5,6 +5,10 @@
           Home</a>
     </li>
     <li class="nav-item" role="presentation">
+      <a  href="{% url 'employee_examination' %}" class="nav-link">
+          Examination</a>
+    </li>
+    <li class="nav-item" role="presentation">
       <a  href="{% url 'employee_patients_list' %}" class="nav-link">
           Patients List</a>
     </li>
