--- a/chmc_wbms/templates/employee/edit_profile.html
+++ b/chmc_wbms/templates/employee/edit_profile.html
@@ -41,16 +41,7 @@
                         
                     </div>
 
-                    <div class="row gx-3 mb-3">\
-                        <div class="col-md-6">
-                            <label for="{{ form.is_employee.id_for_label }}" class="form-label">Employee:</label>
-                            {{ form.is_employee|add_class:"form-check-input" }}
-                        </div>
-                        <div class="col-md-6">
-                            <label for="{{ form.is_associated_doctor.id_for_label }}" class="form-label">Associated Doctor:</label>
-                            {{ form.is_associated_doctor|add_class:"form-check-input" }}
-                        </div>
-                        <div class="col-md-6">
+                    <div class="row gx-3 mb-3">
                             <label for="{{ form.image.id_for_label }}" class="form-label">Profile Picture:</label>
                             {{ form.image|add_class:"form-control-file" }}
                         </div>
